<resources>
    <string name="app_name">InsikostMobile</string>
    <string name="masuk_akun_anda">Masuk Akun anda</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>

    <string name="deskripsi_jenis">Sampah merupakan hasil produksi manusia yang tidak akan pernah luput dari kehidupan sehari-hari. Lalu, jenis-jenis sampah apa yang biasanya kita hasilkan? Yuk, kenali di sini.\n\nSampah jika dibiarkan saja akan mengganggu kebersihan lingkungan secara umum. Sampah dapat dibedakan menjadi dua macam, yaitu:</string>
    <string name="anorganik"><b>1. Sampah Padat (Anorganik)</b>\n\nSampah anorganik adalah sampah yang terdiri atas bahan-bahan anorganik. Contoh bahan-bahan anorganik adalah bahan logam, plastik, kaca, karet, dan kaleng. Sifat sampah anorganik adalah tahan lama dan sukar membusuk.\n\nSampah ini tidak mudah diuraikan oleh mikroorganisme tanah. Apabila dibuang sembarangan, sampah anorganik dapat menimbulkan pencemaran tanah.</string>
    <string name="organik"><b>2. Sampah Basah (Organik)</b>\n\nSampah organik adalah sampah yang terdiri atas bahan-bahan organik. Sifat sampah organik adalah tidak tahan lama dan cepat membusuk. Biasanya sampah jenis ini berasal dari makhluk hidup. Contohnya adalah sayur-sayuran, buah-buah yang membusuk, sisa nasi, daun, dan sebagainya.\n\nSampah organik mudah diuraikan mikroorganisme tanah. Hanya saja jenis sampah akan menimbulkan bau kurang sedap jika tidak dikelola dengan baik.</string>
    <string name="nama_penghuni">Nama Penghuni</string>
    <string name="jumlah_pembayaran">Rp.300.000</string>
    <string name="tgl_pembayaran">22 Mei 2022</string>
    <string name="kamar">Kamar Reguler</string>
    <string name="add_pembayaran">tamba pembayaran</string>
    <string name="tgl_pelaporan">4 Juni 2021</string>
    <string name="isi_laporan">The lorem ipsum is a placeholder text used in publishing and graphic design. This filler text is a short paragraph that contains all the letters of the alphabet.</string>
    <string name="st_diterima">Diterima</string>
    <string name="phone">Phone</string>
    <string-array name="kategori_sampah">
        <item>Januiari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
    <string-array name="harga_perkilo">
        <item>1500</item>
        <item>3000</item>
        <item>800</item>
        <item>1000</item>
    </string-array>
</resources>