<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNamaKamar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kamar"
                android:textColor="#00BCD4"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/tgl_pembayaran"
                android:textColor="#00BCD4"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:src="@drawable/profile_pic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/imageProfile"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNamaPenghuni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_penghuni"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNominal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_pembayaran"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imageProfile"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tvMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Juli "
                        android:layout_marginRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                    <TextView
                        android:id="@+id/tvYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2022"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
        <ImageView
            android:id="@+id/ivPembayaran"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/pay"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_btn_primary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_diterima"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>



    </LinearLayout>


</androidx.cardview.widget.CardView>