<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvHistory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">
<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="Daftar Pelaporan"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:textStyle="bold" />-->
<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="end"-->
<!--        android:src="@drawable/ic_add"-->
<!--        android:contentDescription="@string/add_pembayaran"-->
<!--        android:layout_margin="16dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="15dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:src="@drawable/profile_pic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/imageProfile"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_penghuni"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCreateAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_pelaporan"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />



            </LinearLayout>


        </RelativeLayout>
        <TextView
            android:id="@+id/tvIsiLapor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isi_laporan"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/ivPelaporan"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/pay"/>




    </LinearLayout>


</androidx.cardview.widget.CardView>